[package]
name = "i8080"
version = "1.0.2"
authors = ["Deokhwan Kim"]
description = "i8080 is an Intel 8080 emulation library in Rust."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dkim/i8080"
keywords = ["intel-8080"]
categories = ["emulators"]
documentation = "https://dkim.github.io/i8080/1.0.2/i8080"
edition = "2018"

[dependencies]
backtrace = "0.3.55"
bitflags = "2.4.1"
